$Id$


2003/12/20 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- module XML: Added new flag which allows to always include files to the
  toplevel.


===========================================================================
MARK: released gwenhywfar-0.9.4rc1 (2003/12/20)
===========================================================================


2003/12/20 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- module XML: Added function that takes a search path (for <include> tags).
- module XML: Added new flag which allows to share toplevel tags across
  multiple files
- prepared release of 0.9.5rc1 (Release Candidate)


2003-12-20  Christian Stimming  <stimming@tuhh.de>

	* gwenhywfar.m4: Make version error message more verbose.


2003/12/20 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- fixed a bug in XML code


2003/12/18 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added MD algorithm: MD5
- GWEN_CryptKey_{G,S}etKeyData: These are now only defined if the macro
  "GWEN_EXTEND_CRYPTKEY" is defined. This prevents an application from
  carelessly using these functions.
- added a conveniance function for hashing
- added a function that creates keydata from a password by hashing it
- improved XML parser: It can now read the XML files of Simthetic
- improved XML parser: Added some functions for tree navigation and for
  locating tags inside the XML tree (GWEN_XMLNode_FindFirstTag() etc)


===========================================================================
MARK: released gwenhywfar-0.9beta9 (2003/12/15)
===========================================================================


2003/12/13 Martin Preuss <martin@libchipcard.de>
------------------------------------------------
- added string functions to base/buffer module
- improved library loader
- added code for DLL init