@@ -1,5 +1,8 @@
 $Id$
 
+2003-12-28  Christian Stimming  <stimming@tuhh.de>
+
+	* src/parser/db.h: Add predicates for testing the type of a node.
 
 2003/12/20 Martin Preuss <martin@libchipcard.de>
 ------------------------------------------------
